Feb 14, 2021: version 0.0.0a10

* Implemented: "Advise Next" and "Self Play" buttons
* Add an "Analyze Prev" button (not yet implemented)
* Add a Preferences dialog (including chess engine exe path, search time, play sound effect) 


Feb 07, 2021: version 0.0.0a9

* Add buttons: "New", "Back", "Forward", "Advise" (the last one was not yet implemented)
* Add opening identification
* Allow resizing the App window by stretching and maintaining accuracy of chess selection position with mouse clicking


Feb 06, 2021: version 0.0.0a8

* First stable version with basic functions allows for simple two-person playing.