@@ -1,0 +1,9 @@
+# -*- coding: utf-8 -*-
+
+# Author: Tank Overlord <TankOverLord88@gmail.com>
+#
+# License: LGPL-3.0
+
+from ._data import user_game
+
+__all__ = ["user_game", ]
