@@ -1,3 +1,4 @@
 chess>=1.4.0
 pygame>=2.0.1
 PySide2>=5.15.2
+matplotlib>=3.4.0
