@@ -1,3 +1,7 @@
+Mar 21, 2021: work in progress -- the data dir; the analyze for blunder func
+
+
+
 Feb 14, 2021: version 0.0.0a10
 
 * Implemented: "Advise Next" and "Self Play" buttons
